--- a/app/html/index.html
+++ b/app/html/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
     <div id="app">
-       {{time}}
-       <div class="time">
+       <!--<div class="time">
            <div class="time-head">
                <div class="year">{{showYear}}年</div>
                <div class="munth">{{showMouth}}月</div>
@@ -31,8 +30,9 @@
                    <div class="in-right"></div>
                </div>
            </div>
-       </div>
-        <!--<apps></apps>-->
+       </div>-->
+       <time></time>
+       <!--<apps></apps>-->
     </div>
     <!--<a href="./second.html">sss</a>
     <br/>-->
