--- a/app/html/index.html
+++ b/app/html/index.html
@@ -31,7 +31,7 @@
                </div>
            </div>
        </div>-->
-       <timecompont></timecompont>
+       <timecompont :inputText="inputText"></timecompont>
        <!--<apps></apps>-->
     </div>
     <!--<a href="./second.html">sss</a>
